# hector_math

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
.github/: build_docs_on_github.sh
.github/workflows/: ci-ros1.yml  ci-ros2.yml  ci.yml  documentation.yml
docs/: Doxyfile  conf.py  index.rst
docs/_templates/: versions.html
docs/pages/: Coloring.rst  Containers.rst  EigenHelpers.rst  Iterators.rst  MapOperations.rst  QuaternionBinning.rst  Shapes.rst
docs/scripts/: generate_coloring_images.py
hector_math/: CMakeLists.txt  package.xml  visualize_binning.py
hector_math/benchmark/: caches.cpp  iterators.cpp  pr2.urdf  quaternion_binning_modes.cpp
hector_math/docs/: Makefile
hector_math/docs/pages/: Coloring.rst
hector_math/docs/scripts/: generate_coloring_images.py
hector_math/include/hector_math/containers/: bounded_vector.h  ring_buffer.h
hector_math/include/hector_math/helpers/: coloring.h  coloring.hpp
hector_math/include/hector_math/iterators/: circle_iterator.h  polygon_iterator.h
hector_math/include/hector_math/map_operations/: fit_plane.h
hector_math/include/hector_math/math/: operations.h
hector_math/include/hector_math/types/: aggregators.h  eigen.h  pose.h
hector_math/scripts/: show_iterators.cpp
hector_math/test/: CMakeLists.txt  iterator_test_input.h  test_bounded_vector.cpp  test_bounding_box.cpp  test_hector_iterators.cpp  test_hector_map_operations.cpp  test_quaternion_binning.cpp  test_ring_buffer.cpp
hector_math_py/: CMakeLists.txt  package.xml
hector_math_py/hector_math/: __init__.py
hector_math_py/hector_math/coloring/: __init__.py
hector_math_py/src/: hector_math.cpp
hector_math_ros/: CMakeLists.txt  package.xml
hector_math_ros/benchmark/: robot_model.cpp
hector_math_ros/include/hector_math_ros/impl/urdf/: robot_model_impl.hpp
hector_math_ros/include/hector_math_ros/robot/: joint_state_subscriber.hpp
hector_math_ros/include/hector_math_ros/urdf/: robot_model.hpp
hector_math_ros/test/: CMakeLists.txt  test_joint_state_subscriber.cpp
hector_math_ros2/: CMakeLists.txt  package.xml
hector_math_ros2/benchmark/: robot_model.cpp
hector_math_ros2/include/hector_math_ros2/impl/urdf/: robot_model_impl.hpp
hector_math_ros2/include/hector_math_ros2/message_conversions/: geometry_msgs.hpp  gridmap_msgs.hpp  robot_model.hpp
hector_math_ros2/include/hector_math_ros2/robot/: joint_state_subscriber.hpp
hector_math_ros2/test/: test_joint_state_subscriber.cpp  test_joint_state_subscriber.test
