<?xml version="1.0"?>
<package format="3">
  <name>hector_math</name>
  <version>0.0.0</version>
  <description>The hector_math package</description>

  <maintainer email="fabian@sim.tu-darmstadt.de">Stefan Fabian</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>eigen3_cmake_module</build_depend>
  <test_depend>gtest</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
