<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hector_math_py</name>
  <version>0.0.0</version>
  <description>Python wrapper for hector_math</description>
  <maintainer email="fabian@sim.tu-darmstadt.de">Stefan Fabian</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>hector_math</build_depend>
  <build_depend>pybind11-dev</build_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
