<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hector_math_ros2</name>
  <version>0.0.0</version>
  <description>The hector_math_ros2 package</description>

  <maintainer email="fabian@sim.tu-darmstadt.de">Stefan Fabian</maintainer>

  <license>MIT</license>

  <author email="fabian@sim.tu-darmstadt.de">Stefan Fabian</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>hector_math</build_depend>
  <build_depend>urdf</build_depend>
  <build_export_depend>hector_math</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
</package>
